Add OAuth to API and authurization to routes. Preparing for live testing
